# voicecontrolledgames

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  settings.json
.claude/: settings.local.json
profiles/: default.json
src/: main.py
src/config/: mappings.py  profile.py  settings.py
src/controller/: gamepad.py
src/gui/: main_window.py  mapping_editor.py  mic_selector.py  profile_manager.py
src/speech/: command_parser.py  recognizer.py
tests/: test_command_parser.py  test_mappings.py
