[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voice-controlled-games"
version = "0.1.0"
description = "Voice-controlled virtual gamepad for Steam games"
requires-python = ">=3.9"
dependencies = [
    "vosk",
    "vgamepad",
    "PyQt6",
    "pyaudio",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
voice-controlled-games = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
